fix: Claude's fixes over Jules' PR

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,25 +1,23 @@
-FROM node:20-alpine
+# Multi-stage build for Elm client
+# Stage 1: Build (amd64 only - Elm output is platform-independent JS)
+FROM --platform=linux/amd64 node:20-alpine AS builder
 
 WORKDIR /app
 
-# Install Elm compiler with architecture detection
-# Handles both x86_64 (amd64) and aarch64 (Raspberry Pi)
-RUN apk add --no-cache curl tar && \
-    if [ "$(uname -m)" = "aarch64" ]; then \
-        curl -L https://github.com/punie/elm-linux-arm64/releases/download/0.19.1/elm-aarch64.tar.gz | tar xz && \
-        chmod +x elm && \
-        mv elm /usr/local/bin/; \
-    else \
-        curl -L -o elm.gz https://github.com/elm/compiler/releases/download/0.19.1/binary-for-linux-64-bit.gz && \
-        gunzip elm.gz && \
-        chmod +x elm && \
-        mv elm /usr/local/bin/; \
-    fi
+# Install Elm compiler (amd64 binary)
+RUN apk add --no-cache curl && \
+    curl -L -o elm.gz https://github.com/elm/compiler/releases/download/0.19.1/binary-for-linux-64-bit.gz && \
+    gunzip elm.gz && chmod +x elm && mv elm /usr/local/bin/
 
 # Copy package files and install dependencies
-# This layer will be cached unless package.json changes
 COPY package.json package-lock.json ./
-RUN npm install
+RUN npm ci
 
-# Default command to build the app
-CMD ["npm", "run", "build"]
+# Copy source and build
+COPY . .
+RUN npm run build
+
+# Stage 2: Final image (minimal Alpine with static files)
+FROM alpine:latest
+COPY --from=builder /app/dist /dist
+CMD ["echo", "Static files available in /dist"]
