--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,14 +48,16 @@ services:
       - frostbyte_network
 
   client_builder:
-    build: ./client
+    build:
+      context: ./client
+      target: builder
     container_name: frostbyte_client_builder
     working_dir: /app
     command: npm run build
     volumes:
       - ./client:/app
       - client_dist:/app/dist
-      - /app/node_modules
+      - client_node_modules:/app/node_modules
     networks:
       - frostbyte_network
 
@@ -83,6 +85,7 @@ services:
 volumes:
   postgres_data:
   client_dist:
+  client_node_modules:
   caddy_data:
   caddy_config:
 
