Architectural Fixes: Initialization, Docker Optimization, and History View (#6)
* Refactor architecture to fix initialization, optimize Docker, and correct history view

- **Frontend**: Modified `Main.elm` to use explicit loading flags (`ingredientsLoaded`, etc.) instead of list emptiness, allowing the app to initialize on fresh installs. Updated `Dashboard.elm` to remove redundant data fetching.
- **Docker**: Created a multi-arch `client/Dockerfile` to pre-install Elm and npm dependencies, significantly speeding up builds. Updated `docker-compose.yml` to use this image and ensure Caddy waits for the build to complete.
- **Database**: Updated `freezer_history` view to use `generate_series`, filling in date gaps for accurate charts.
- **Documentation**: Added `ARCHITECTURE_CRITIQUE.md` detailing the analysis and improvements.

Co-authored-by: nilp0inter <1224006+nilp0inter@users.noreply.github.com>

* fix: Claude's fixes over Jules' PR

* refactor: move calculations to the client

* refactor: move data manipulation to the client

* feat: improve visual style

---------

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>
Co-authored-by: nilp0inter <1224006+nilp0inter@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,10 +48,12 @@ services:
       - frostbyte_network
 
   client_builder:
-    image: node:20-alpine
+    build:
+      context: ./client
+      target: builder
     container_name: frostbyte_client_builder
     working_dir: /app
-    command: sh -c "apk add --no-cache curl && if [ \"$(uname -m)\" = \"aarch64\" ]; then curl -L https://github.com/punie/elm-linux-arm64/releases/download/0.19.1/elm-aarch64.tar.gz | tar xz; else curl -L -o elm.gz https://github.com/elm/compiler/releases/download/0.19.1/binary-for-linux-64-bit.gz && gunzip elm.gz; fi && chmod +x elm && mv elm /usr/local/bin/ && npm install && npm run build"
+    command: npm run build
     volumes:
       - ./client:/app
       - client_dist:/app/dist
@@ -71,9 +73,12 @@ services:
       - caddy_data:/data
       - caddy_config:/config
     depends_on:
-      - postgrest
-      - printer_service
-      - client_builder
+      postgrest:
+        condition: service_started
+      printer_service:
+        condition: service_started
+      client_builder:
+        condition: service_completed_successfully
     networks:
       - frostbyte_network
 
