--- a/docker-compose.secrets.yml
+++ b/docker-compose.secrets.yml
@@ -8,3 +8,13 @@ services:
   postgrest:
     environment:
       PGRST_DB_URI: postgres://frostbyte_user:${FROSTBYTE_POSTGRES_PASSWORD}@postgres:5432/frostbyte_db
+
+  gobackup:
+    environment:
+      POSTGRES_PASSWORD: ${FROSTBYTE_POSTGRES_PASSWORD}
+      B2_BUCKET: ${FROSTBYTE_B2_BUCKET}
+      B2_REGION: ${FROSTBYTE_B2_REGION}
+      B2_ENDPOINT: ${FROSTBYTE_B2_ENDPOINT}
+      B2_KEY_ID: ${FROSTBYTE_B2_KEY_ID}
+      B2_APP_KEY: ${FROSTBYTE_B2_APP_KEY}
+      HEALTHCHECKS_URL: ${FROSTBYTE_HEALTHCHECKS_URL}
