feat(common): migrate db image storage to a proper s3-compatible storage

--- a/common/backup/gobackup.yml
+++ b/common/backup/gobackup.yml
@@ -11,6 +11,8 @@ models:
     archive:
       includes:
         - /data/json
+        - /data/storage/frostbyte-assets
+        - /data/storage/labelmaker-assets
     databases:
       postgresql:
         type: postgresql
