--- a/docker-compose.secrets.yml
+++ b/docker-compose.secrets.yml
@@ -17,6 +17,16 @@ services:
     environment:
       PGRST_DB_URI: postgres://kitchen_user:${KITCHEN_POSTGRES_PASSWORD}@postgres:5432/kitchen_db
 
+  storage:
+    environment:
+      ROOT_ACCESS_KEY_ID: ${KITCHEN_STORAGE_ACCESS_KEY}
+      ROOT_SECRET_ACCESS_KEY: ${KITCHEN_STORAGE_SECRET_KEY}
+
+  storage_init:
+    environment:
+      AWS_ACCESS_KEY_ID: ${KITCHEN_STORAGE_ACCESS_KEY}
+      AWS_SECRET_ACCESS_KEY: ${KITCHEN_STORAGE_SECRET_KEY}
+
   gobackup:
     environment:
       POSTGRES_PASSWORD: ${KITCHEN_POSTGRES_PASSWORD}
